--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     text-align: center;
     font-family: 'Inconsolata', monospace;
@@ -7,6 +6,7 @@ body {
 
 h2 {
     margin: 1em 0 0.25em;
+    font-size: 35px;
 }
 
 h2:first-of-type {
@@ -19,10 +19,25 @@ h2:first-of-type {
 
 }
 
-  #scoreTotal {
+#scoreTotal {
 
     font-size:15px;
     line-height: 15px;
   }
 
+#restart {
+
+    margin: auto; 
+    font-size: 15px;
+  }
  
+
+.score-div {
+
+    font-size:10px;
+    line-height: 10px;
+  }
+
+#decreaseTime {
+    font-size:10px;
+}
