--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ h2 {
     font-size: 35px;
 }
 
+.timer {
+    font-size: 22px;
+}
+
 h2:first-of-type {
     margin-top: 0.5em;
 }
@@ -33,12 +37,13 @@ h2:first-of-type {
 
     font-size:15px;
     line-height: 15px;
+    margin-top: -4px;
   }
 
 #restart {
 
     margin: auto; 
-    font-size: 15px;
+    font-size: 12px;
   }
 
 
@@ -49,6 +54,12 @@ h2:first-of-type {
 #score-div {
 font-size: 15px;
 font-weight: bold;
+margin-top: -1px;
+}
+
+
+.p1 {
+    margin-top: -9px;
 }
 
 button {
